# sistema_lanchonete_limpo

./: .gitignore  AJUSTES_LAYOUT_DASHBOARD.md  AVALIACAO_PROJETO_EMPRESARIAL.md  COMANDOS_VSCODE.md  CORRECAO_PRECO_CARRINHO.md  CURSO_PYTHON_PARTE2.md  DIAGNOSTICO_FINAL_SISTEMA.md  DOCUMENTACAO_COMPLETA.md  DOCUMENTACAO_TECNICA_COMPLETA.md  FUNCIONALIDADE_EDICAO_CONTAS.md  GUIA_LICENCIAMENTO.md  GUIA_PROGRAMADOR_EXCELENTE.md  INSTRUCOES_UPLOAD_GITHUB.md  LICENCA_PROPRIETARIA.md  PLANO_TESTE_COMPLETO.md  PROJETO_REAL_COMERCIAL.md  PROTEGER_MEU_SISTEMA.md  README.md  RELATORIO_MELHORIAS_INTERFACE.md  RELATORIO_TESTE_MANUAL.md  SISTEMA_RELATORIOS_COMPLETO.md  SOLUCAO_AGRUPAMENTO_CLIENTES.md  SOLUCAO_AMBIENTE_VIRTUAL.md  build_exe.py  instalar_python_e_executar.bat  main_funcional.py  nuitka-crash-report.xml  protecao.py  pyproject.toml  replit.md  sistema_protecao.py  sistema_protecao_autoria.py  teste_completo_sistema.py  teste_produto_sem_protecao.py  teste_senha_desenvolvedor.py  teste_sistematico_completo.py  verificar_tabela_fiado.py
data/: .gitkeep  banco.db  certificado_autoria.txt  relatorio_testes.json  teste_banco.db
docs/: COMO_USAR.md  CORRECAO_LOGICA_LANCHONETE.md  CORRECAO_PYTHON_310.md  CORRECAO_VALIDACAO_PRODUTO.md  CURSO_PYTHON_COMPLETO.md  CURSO_PYTHON_RESUMO_COMPLETO.md  DASHBOARD_COMPLETO.md  DOWNLOAD_DIRETO.md  GUIA_GITHUB.md  GUIA_PROTECAO_AUTORIA.md  INSTRUCOES_INSTALACAO.md  INSTRUCOES_PYTHON_3_10.md  INSTRUCOES_SINCRONIZACAO.md  LICENCAS_LEGAIS_SISTEMA.md  MANUAL_TREINAMENTO_SISTEMA_LANCHONETE.md  SENHA_DESENVOLVEDOR.md  SINCRONIZAR_VSCODE.md  SISTEMA_PROTECAO_COMPLETA.md  SUCESSO_SINCRONIZACAO_GIT.md  manual_instalar.md
src/: __init__.py
(+30 files in other folders)
